k8s/networkpolicies/orders.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: orders
  labels:
    app.kubernetes.io/name: orders
    app.kubernetes.io/part-of: retail-store
    app.kubernetes.io/managed-by: kustomize
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: orders
      app.kubernetes.io/component: service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ui
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: checkout
      ports:
        - port: 8080
          protocol: TCP
  egress:
    - ports:
        - port: 5432
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: orders
              app.kubernetes.io/component: rabbitmq
      ports:
        - port: 5672
          protocol: TCP
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
